--- a/app/src/main/res/layout/post_ad.xml
+++ b/app/src/main/res/layout/post_ad.xml
@@ -1,144 +1,114 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
     android:layout_gravity="center"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical">
 
     <EditText
         android:id="@+id/inputPostTitle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="16dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginRight="16dp"
-        android:background="@drawable/text_background"
-        android:drawableStart="@drawable/ic_text_fields_black_24dp"
-        android:drawableLeft="@drawable/ic_text_fields_black_24dp"
-        android:drawablePadding="5dp"
-        android:drawableTint="@color/colorPrimaryDark"
-        android:hint="Post Title"
-        android:inputType="text"
         android:padding="10dp"
+        android:background="@drawable/text_background"
+        android:hint="Post Title"
+        android:drawableStart="@drawable/ic_text_fields_black_24dp"
+        android:drawableTint="@color/colorPrimaryDark"
+        android:drawablePadding="5dp"
+        android:layout_marginRight="16dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginLeft="16dp"
+        android:inputType="text"
+        android:drawableLeft="@drawable/ic_text_fields_black_24dp"
         tools:ignore="UnknownId" />
 
     <EditText
         android:id="@+id/inputPostDescription"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="16dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginRight="16dp"
+        android:padding="10dp"
         android:background="@drawable/text_background"
-        android:drawableStart="@drawable/ic_description_black_24dp"
-        android:drawableLeft="@drawable/ic_description_black_24dp"
-        android:drawablePadding="5dp"
-        android:drawableTint="@color/colorPrimaryDark"
         android:hint="Post Description"
         android:inputType="textMultiLine"
-        android:padding="10dp"
-        app:layout_constraintTop_toBottomOf="@+id/inputPostTitle" />
+        android:drawableStart="@drawable/ic_description_black_24dp"
+        android:drawableTint="@color/colorPrimaryDark"
+        android:drawablePadding="5dp"
+        android:layout_marginRight="16dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginLeft="16dp"
+        app:layout_constraintTop_toBottomOf="@+id/inputPostTitle"
+        android:drawableLeft="@drawable/ic_description_black_24dp" />
 
     <TextView
         android:id="@+id/PostCategorySpinner"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="16dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginRight="16dp"
         android:background="@drawable/text_background"
         android:drawableStart="@drawable/ic_shopping_cart_black_24dp"
-        android:drawableLeft="@drawable/ic_shopping_cart_black_24dp"
-        android:drawableEnd="@drawable/ic_keyboard_arrow_down_black_24dp"
-        android:drawableRight="@drawable/ic_keyboard_arrow_down_black_24dp"
-        android:drawablePadding="5dp"
         android:drawableTint="@color/colorPrimaryDark"
+        android:drawablePadding="5dp"
         android:padding="10dp"
         android:text="Post Category"
-        app:layout_constraintTop_toBottomOf="@+id/inputPostDescription" />
+        android:drawableEnd="@drawable/ic_keyboard_arrow_down_black_24dp"
+        android:layout_marginRight="16dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginLeft="16dp"
+        app:layout_constraintTop_toBottomOf="@+id/inputPostDescription"
+        android:drawableLeft="@drawable/ic_shopping_cart_black_24dp"
+        android:drawableRight="@drawable/ic_keyboard_arrow_down_black_24dp" />
+
 
 
     <EditText
         android:id="@+id/inputProductPrice"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="16dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginRight="16dp"
-        android:autofillHints=""
-        android:background="@drawable/text_background"
-        android:drawableStart="@drawable/ic_shopping_cart_black_24dp"
-        android:drawableLeft="@drawable/ic_shopping_cart_black_24dp"
-        android:drawablePadding="5dp"
-        android:drawableTint="@color/colorPrimaryDark"
-        android:hint="Product Price"
-        android:inputType="number"
         android:padding="10dp"
+        android:background="@drawable/text_background"
+        android:hint="Product Price"
+        android:drawableStart="@drawable/ic_shopping_cart_black_24dp"
+        android:drawableTint="@color/colorPrimaryDark"
+        android:drawablePadding="5dp"
+        android:layout_marginRight="16dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginLeft="16dp"
+        android:inputType="number"
         app:layout_constraintTop_toBottomOf="@+id/PostCategorySpinner"
+        android:autofillHints=""
+        android:drawableLeft="@drawable/ic_shopping_cart_black_24dp"
         tools:ignore="UnknownId" />
 
 
-    <LinearLayout
-        android:layout_height="wrap_content"
-        android:layout_width="wrap_content"
-        android:orientation="vertical"
-        android:paddingLeft="100dp">
 
-        <ImageView
-            android:id="@+id/SelectImage"
-            android:layout_width="140dp"
-            android:layout_height="146dp"
-            android:layout_row="0"
-            android:layout_column="0"
-            android:layout_margin="30dp"
-            android:contentDescription="TODO"
-            android:src="@drawable/upload_img"
-            android:textAllCaps="false"
-            app:layout_constraintTop_toBottomOf="@+id/inputProductPrice"
-            tools:ignore="MissingConstraints,NotSibling" />
+    <ImageView
+        android:id="@+id/SelectImage"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:layout_column="0"
+        android:layout_row="0"
+        app:layout_constraintTop_toBottomOf="@+id/inputProductPrice"
+        android:layout_margin="3dp"
+        android:textAllCaps="false"
+        android:src="@drawable/upload_img"
+        tools:ignore="MissingConstraints,NotSibling"
+        android:contentDescription="TODO" />
 
-        <Button
-            android:id="@+id/upload_image_btn"
-            android:layout_width="wrap_content"
-            android:layout_height="33dp"
-            android:layout_gravity="center"
-            android:background="@color/colorPrimaryDark"
-            android:layout_marginTop="-20dp"
-            android:textAlignment="center"
-            android:padding="5dp"
-            android:text="Upload Image"
-            android:clickable="true"
-            android:textFontWeight="@android:integer/config_longAnimTime">
-
-
-        </Button>
-
-        <Switch
-            android:id="@+id/deactivate"
-            android:layout_width="wrap_content"
-            android:layout_height="106dp"
-            android:text="   Deactivate Ad" />
-
-
-    </LinearLayout>
 
     <Button
         android:id="@+id/btnAddProduct"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="16dp"
-        android:layout_marginTop="32dp"
-        android:layout_marginRight="16dp"
-        android:layout_marginBottom="32dp"
         android:background="@drawable/btn_corner"
         android:text="Post Advertisement"
+        android:layout_marginTop="32dp"
+        android:layout_marginBottom="32dp"
         android:textColor="#ffffff"
         android:textSize="16sp"
+        android:layout_marginRight="16dp"
+        android:layout_marginLeft="16dp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/SelectImage" />
-
-
 </LinearLayout>
