--- a/app/src/main/res/layout/post_ad.xml
+++ b/app/src/main/res/layout/post_ad.xml
@@ -4,14 +4,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_gravity="center"
     android:fillViewport="true"
     android:orientation="vertical">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:layout_marginTop="70dp">
 
     <EditText
         android:id="@+id/inputPostTitle"
@@ -28,7 +28,7 @@
         android:hint="Title"
         android:inputType="text"
         android:padding="10dp"
-        tools:ignore="UnknownId" />
+        app:layout_constraintTop_toBottomOf="@id/appBarLayout"/>
 
     <EditText
         android:id="@+id/inputPostDescription"
